<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2025-2026 The AviumUI Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Moon Suggestions</string>
    
    <string name="title_name">Moon Features</string>
    <string name="switch_screen_always_on_title">Temporary Screen Always-On</string>
    <string name="switch_screen_always_on_desc">Keep screen on until manually turned off when tapping dimmed screen</string>
    <string name="switch_torch_suggestion_title">Flashlight Suggestion</string>
    <string name="switch_torch_suggestion_desc">Suggest turning off flashlight after activation</string>
    <string name="switch_music_suggestion_title">Music App Suggestion</string>
    <string name="switch_music_suggestion_desc">Suggest opening music app when headphones are connected</string>
    <string name="switch_url_suggestion_title">Open Link in App</string>
    <string name="switch_url_suggestion_desc">Suggest opening corresponding app when copying links (Supports Taobao, Baidu Netdisk, 123 Cloud)</string>
    <string name="switch_url_share_title">Quick URL Opening</string>
    <string name="switch_url_share_desc">Suggest opening in browser if no matching app found for copied link</string>
    <string name="main_hint">Swipe floating icon right to cancel suggestion</string>
    <string name="dialog_select_music_app_title">Select Music App</string>
    <string name="dialog_no_apps_found">No launchable apps found</string>
    <string name="desc_selected_app">Selected</string>
    <string name="switch_music_suggestion_desc_placeholder">Suggest opening music app when headphones connected. Tap to select app</string>
    <string name="default_music_app">org.lineageos.twelve</string>
    <string name="useful_summary">Moon Suggestions</string>
    <string name="useful_title">Convenience Features</string>
    <string name="switch_delivery_title">Delivery Suggestion</string>
    <string name="switch_delivery_desc">Suggest jumping to tracking page when copying tracking number (Supports SF Express, ZTO, YTO, J&amp;T)</string>
    <string name="main_ps">We do not upload any of your data. All matching is processed locally</string>
    <string name="switch_sms_code_title">SMS Code Extraction</string>
    <string name="switch_sms_code_desc">When receiving SMS verification code, copy code to clipboard</string>
    <string name="sms_code_channel_name">SMS Verification Code</string>
    <string name="sms_code_notification_title">SMS verification code received</string>
    <string name="open_url_with">Open with</string>
    <string name="switch_music_suggestion_summary_on">Open %1$s when connected to ears</string>
    <string name="switch_music_suggestion_summary_off">Disabled</string>
    <string name="category_function">Useful functions settings</string>
    <string name="privacy_notice">We do not upload any of your data. All processing is done locally</string>
</resources>
